<resources>
    <string name="app_name">Abdullaev</string>
    <string name="title">Developers Life</string>
    <string name="latest">Последние</string>
    <string name="top">Лучшие</string>
    <string name="hot">Горячие</string>
    <string name="back">Предыдущая</string>
    <string name="next">Следующая</string>
    <string name="description">Описание</string>
    <string name="gif_image">Gif изображение</string>
    <string name="error_connection_message">Произошла ошибка при загрузке данных. Проверьте подключение к сети.</string>
    <string name="error">Ошибка</string>
    <string name="repeat">Повторить</string>
    <string name="message">Message</string>
</resources>